# ai-study-assistant-langgraph

./: .gitignore  DataIngestion.py  README.md  app.py  create_faiss_index.py  embedding_storing_data.py  main.py  pyproject.toml  retrieval_tool.py  streamlit_app.py  video_resources.txt
Data/: AI.txt
Data/faiss_index/: index.pkl
Tools/: gen2.py  mindmap_tool.py  video_resources.txt  web_search.py  youtube_videos_search.py
