[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.2",
    "deepseek-sdk>=0.1.1",
    "einops>=0.8.2",
    "faiss-cpu>=1.13.2",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.196.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.1.10",
    "mcp-client>=0.0.0",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "scrapling[all]>=0.4.7",
    "sentence-transformers>=5.4.1",
    "graphviz>=0.21",
    "streamlit>=1.57.0",
    "weaviate>=0.1.2",
    "langchain-weaviate>=0.0.6",
    "torchvision>=0.26.0",
]
